@@ -1,6 +1,13 @@
 Changes since version 1.0.0
 ---------------------------
 
+- Ice will now listen on all local interfaces if no -h parameter
+  is present in the endpoint configuration and no default host has
+  been set. It will also listen to all interfaces if the -h parameter
+  is set to *. In such configurations the endpoints published
+  in proxies will not contain the loopback interface (127.0.0.1)
+  unless it is the only local interface present.
+
 - slice2cppe now provides the --add-header option. It adds a #include directive
   for the specified header at the beginning of the generated source file. For
   example:
